<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_gasto"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add_gasto"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/menu_stats"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout"
        app:iconTint="@color/white"
        app:showAsAction="never" />

</menu>

